# MC_Teklif_pro

./: .gitignore  README.md  _enc_fix.py  _fix_indent_items.py  _patch_debug_items.py  _patch_debug_save.py  _patch_fix_object_session_import.py  _patch_fix_objectdeleted.py  _patch_items_rewrite2.py  _patch_main_window_fix.py  _patch_main_window_fix2.py  _patch_persist_items.py  _patch_save_items_rewrite.py  _patch_save_items_rewrite_fixnewline.py  _patch_ui_pdf_fix.py  _rewrite_items_persist.py  _tmp_list_tables.py  customers_template.xlsx  products_template.xlsx  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: db.py  logging_setup.py  schema.py  services.py  settings.py
app/importers/: customers_import.py  customers_import.py.BAK_ADD_SHA_ALLRET_20260226_042146  customers_import.py.BAK_ADD_SHA_OUT_20260226_041954  customers_import.py.BAK_DEDUP_HASH_20260226_041708  excel_utils.py  products_import.py
app/pdf/: render.py
app/pdf/assets/: default.css
app/pdf/templates/: offer.html
app/ui/: dialogs.py  main_window.py  models.py
installer/: MC_Teklif_Pro.iss
mc_teklif_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build.ps1  ci.ps1  db_counts.ps1  run.ps1  setup.ps1  smoke.ps1  smoke_offer.py
tests/: conftest.py  test_calcs.py  test_numbering.py  test_pdf_smoke.py  test_versioning.py
