[project]
name = "mc-teklif-pro"
version = "0.1.0"
description = "Teklif hazırlama ve PDF üretme uygulaması"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "playwright>=1.40.0",
    "Jinja2>=3.1.0",
    "pytest>=7.4.0",
    "pyinstaller>=6.3.0",
]
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["installer*", "scripts*", "tests*"]
